--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ build-backend = "poetry.core.masonry.api"
 [tool.mypy]
 disallow_untyped_defs = true
 no_implicit_optional = true
+warn_return_any = true
 
 [tool.black]
 line-length = 119
