--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ build-backend = "poetry.core.masonry.api"
 disallow_untyped_defs = true
 no_implicit_optional = true
 warn_return_any = true
+exclude = 'venv'
 
 [tool.black]
 line-length = 119
