--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ mypy = "^1.10.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.2"
+pytest-cov = "^5.0.0"
 
 [build-system]
 requires = ["poetry-core"]
